fix: - [x] Headers separator bigger padding - [x] 		note card title body gap (20px -> 18px) - [x] 		Landing page cards - fixed gap, centered - [x] 		Desktop sidebar - fixed position (separate scroll from body) - [x] 		Bottom navigation separator should be grey - [x] 		table font 16px -> 14px and correct colors - [x] 		Release notes: https://treblle.com/news?category=release-notes

--- a/app/index.css
+++ b/app/index.css
@@ -28,6 +28,18 @@ code span span:first-child {
     color: #5192ff;
 }
 
-/* code span span:nth-child(2) {
-    color: #04e8b0;
-} */
+table tr, th, td {
+    font-size: 14px;
+}
+
+table td:has(strong) {
+    color: #ffffff;
+}
+
+table td {
+    color: #bcc0d9;
+}
+
+#heading-2 {
+    margin-bottom: 16px;
+}
